--- a/Proyecto Clinica Odontologica/ClinicaOdontologica/src/test/get_odontologos.html
+++ b/Proyecto Clinica Odontologica/ClinicaOdontologica/src/test/get_odontologos.html
@@ -8,8 +8,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/js/odontologos/get_odontologos.js"></script>
-    <script type="text/javascript" src="/js/odontologos/delete_odontologos.js"></script>
+    <script type="text/javascript" src="/src/test/js/odontologos/get_odontologos.js"></script>
+    <script type="text/javascript" src="/src/test/js/odontologos/delete_odontologos.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
